--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.braintreepayments.api:drop-in:5.+'
+    implementation 'com.braintreepayments.api:drop-in:6.9.0'
     implementation 'com.facebook.react:react-native:+'
 }
 
