--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,24 @@
 buildscript {
     repositories {
+        jcenter()
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion '33.0.1'
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -32,7 +33,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.braintreepayments.api:drop-in:6.8.1'
+    implementation 'com.braintreepayments.api:drop-in:6.9.0'
     implementation 'com.facebook.react:react-native:+'
 }
 
